labs/lab-a-traffic-split/virtualservice-reviews.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: { name: reviews }
spec:
  hosts: ["reviews"]
  http:
  - route:
    - destination: { host: reviews, subset: v1, port: { number: 9080 } }
      weight: 50
    - destination: { host: reviews, subset: v2, port: { number: 9080 } }
      weight: 50
